--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ a:hover, a:focus{
 /*remove dots and underscores*/
 ul{
     list-style: none;
+    margin: 0;
+    padding-left: 0;
 }
 a{
     text-decoration: none;
@@ -26,7 +28,41 @@ a{
 .link{
     text-decoration: none;
 } */
+h1, h2, h3, h4, h5, h6, p{
+    margin: 0;
+}
+img{
+    display: block;
+}
+.container{display: flex;
+    min-width: 1158px;
+    padding-left: 156px;
+    padding-right: 156px;
+}
+section{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 /*header*/
+header .container{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+}
+.navigation_menu{
+ display: flex;
+ justify-content: space-between;
+ gap: 40px;
+ padding-left: 76px;
+}
 .navigation_link_logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -48,6 +84,11 @@ a{
 .contact{
     font-style: normal;
 }
+.contact_menu{
+    display: flex;
+ justify-content: space-between;
+ gap: 40px;
+}
 .contact_link{
     letter-spacing: 0.02em;
     color:  #434455;
@@ -55,9 +96,16 @@ a{
 /*main*/
 /*section one*/
 .solutions{
+    display: flex;
+    justify-content: center;
+
+}
+.solutions .container{
+    display: block;
     background-color: #2e2f42;
 }
 .solutions_title{
+    padding-top: 188px;
     font-size: 56px;
     line-height: 1.07;
     text-align: center;
@@ -65,6 +113,7 @@ a{
     color: #fff;
 }
 .solutions_btn{
+    margin-top: 48px;
     background-color: #4D5AE5;
     font-weight: 500;
     line-height: 1.5;
