dz3 work on sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ h1, h2, h3, h4, h5, h6, p{
 img{
     display: block;
 }
-.container{display: flex;
+.container{
+    display: flex;
     min-width: 1158px;
     padding-left: 156px;
     padding-right: 156px;
@@ -96,24 +97,23 @@ nav{
 /*main*/
 /*section one*/
 .solutions{
-    display: flex;
-    justify-content: center;
-
+    padding: 0;
+    text-align: center;
 }
 .solutions .container{
     display: block;
     background-color: #2e2f42;
 }
 .solutions_title{
-    padding-top: 188px;
+    padding: 188px 472px 0 472px;
     font-size: 56px;
     line-height: 1.07;
-    text-align: center;
     letter-spacing: 0.02em;
     color: #fff;
 }
 .solutions_btn{
     margin-top: 48px;
+    margin-bottom: 188px;
     background-color: #4D5AE5;
     font-weight: 500;
     line-height: 1.5;
@@ -124,6 +124,16 @@ nav{
     background-color: #404BBF;
 }
 /*section two*/
+.plan{
+   
+}
+.plan_menu{
+    display: flex;
+    gap: 24px;
+    padding-left: 156px;
+    padding-right: 156px;
+    justify-content: center;
+}
 .plan_title{
     font-weight: 500;
     font-size: 20px;
@@ -138,7 +148,11 @@ nav{
 .team {
     background-color: #F4F4FD;
 }
+.team .container{
+display: block;
+}
 .team_titl {
+    padding-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -147,8 +161,11 @@ nav{
     color: #2e2f42;
 }
 .team_menu {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
 }
-.tiam_item {
+.team_item {
     background-color: #FFFFFF;
 }
 .team_img {
@@ -166,6 +183,10 @@ nav{
 }
 
 /*section four*/
+.portfolio .container{
+    display: block;
+    }
+    
 .portfolio_title {
     font-size: 36px;
     line-height: 1.11;
