--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,15 @@ body{
     font-size: 16px;
     line-height: 1.5;
 }
+.visually-hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
 button{
     cursor: pointer;
 }
@@ -39,6 +48,7 @@ img{
     padding-left: 15px;
     padding-right: 15px;
     width: 1158px;
+    margin: 0 auto;
 }
 section{
     padding-top: 120px;
@@ -54,9 +64,6 @@ header .container{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
 }
 nav{
     display: flex;
@@ -85,6 +92,9 @@ nav{
 .navigation_text{
     color: #2e2f42;
 }
+.navigation_item{
+    padding: 24px 0;
+}
 .navigation_link{
     font-weight: 500;
     color:  #2e2f42;
@@ -99,6 +109,9 @@ nav{
  justify-content: space-between;
  gap: 40px;
 }
+.contact_item{
+    padding: 24px 0;
+}
 .contact_link{
     letter-spacing: 0.02em;
     color:  #434455;
@@ -112,15 +125,21 @@ nav{
 .solutions .container{
     display: block;
     background-color: #2e2f42;
+    padding: 188px;
 }
 .solutions_title{
-    padding: 188px 472px 0 472px;
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: #fff;
+    max-width: 496px; 
 }
 .solutions_btn{
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
     margin-top: 48px;
     margin-bottom: 188px;
     background-color: #4D5AE5;
@@ -143,12 +162,16 @@ nav{
     padding-right: 156px;
     justify-content: center;
 }
+.plan_item{
+    width: calc((100% - 72px) / 4);
+}
 .plan_title{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
 }
 .plan_text{
     letter-spacing: 0.02em;
@@ -232,10 +255,11 @@ display: block;
 .basement{
     background-color:  #2e2f42;
     min-height: 312px;
-    padding-top: 101px;
-
+    padding: 100px 0
 }
 .basement_link{
+    display: inline-block;
+    margin-bottom: 16px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -251,5 +275,4 @@ display: block;
     color: #F4F4FD;
     letter-spacing: 0.02em;
     max-width: 264px;
-padding-top: 17px;
 }
