--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ nav{
 /*main*/
 /*section one*/
 .solutions{
+    margin: 0 auto;
     text-align: center;
     padding: 0;
 }
@@ -135,6 +136,7 @@ nav{
     letter-spacing: 0.02em;
     color: #fff;
     max-width: 496px; 
+    margin: 0 auto;
 }
 .solutions_btn{
     display: block;
@@ -142,13 +144,13 @@ nav{
     height: 56px;
     border: none;
     border-radius: 4px;
-    margin-top: 48px;
-    margin-bottom: 188px;
     background-color: #4D5AE5;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+    margin: 0 auto;
+    margin-top: 48px;
 }
 .solutions_btn:hover, .solutions_btn:focus{
     background-color: #404BBF;
