--- a/css/styles.css
+++ b/css/styles.css
@@ -25,14 +25,13 @@ a:hover, a:focus{
     color: #404bbf;
 }
 /*remove dots and underscores*/
-ul{
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-}
-li{
+ul{ 
     padding: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    list-style-type: none
 }
+
 a{
     text-decoration: none;
 }
